manifests/bank/bank-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: bank
  name: bank
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: bank
  template:
    metadata:
      labels:
        io.kompose.service: bank
    spec:
      containers:
        - image: ghcr.io/apoorva64/simpletcfs/bank:latest
          name: bank
          ports:
            - containerPort: 9090
              hostPort: 9090
              protocol: TCP
          resources:
            limits:
              cpu: "500m"
              memory: "200Mi"
      restartPolicy: Always
