manifests/bank/bank-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: bank
  name: bank
spec:
  ports:
    - name: "9090"
      port: 9090
      targetPort: 9090
  selector:
    io.kompose.service: bank
