manifests/bank/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: bank.polytech.apoorva64.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bank
                port:
                  number: 9090
  tls:
    - hosts:
        - bank.polytech.apoorva64.com
      secretName: bank-tls-ingress
